fix/amount-overflow

--- a/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
+++ b/src/components/FormElements/PaymentLabel/paymentCheckboxLabel.module.scss
@@ -127,7 +127,6 @@
   text-align: right;
   font-size: 15px;
   text-overflow: ellipsis;
-  overflow: hidden;
 
   .description {
     font-size: 18px;
